<resources>
    <string name="app_name">Vetter Health</string>
    <string name="sleeptrack">Track Sleep</string>
    <string name="chatbot">Therapy Chat</string>
    <string name="therapy">Therapy</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="sampleQues">How often do you sleep well?</string>
    <string name="option1">Rarely or None of the time</string>
    <string name="option2">Some or little of the time</string>
    <string name="option3">Occasionally or a moderate amount of time</string>
    <string name="option4">Most or all of the time</string>
</resources>
